--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-include_path=0;/gsi3\u00055;org.eclipse.dltk.USER_LIBRARY/YiiFramework
+include_path=0;/gsi3\u00055;org.eclipse.dltk.USER_LIBRARY/Yii Framework
